--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,18 @@ services:
     networks:
       - app-network
   
+  adminer:
+    image: adminer
+    container_name: bus-adminer
+    restart: always
+    ports:
+      - 8080:8080
+    environment:
+      ADMINER_DEFAULT_SERVER: db
+      ADMINER_DESIGN: dracula
+    networks:
+      - app-network
+  
 volumes:
   mariadb_data:
     driver: local
