--- a/package.json
+++ b/package.json
@@ -6,8 +6,23 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@types/node": "^20.8.10",
+        "@types/ziggy-js": "^1.8.0",
+        "@vitejs/plugin-vue": "^4.4.0",
+        "autoprefixer": "^10.4.16",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.8.0",
+        "naive-ui": "^2.35.0",
+        "postcss": "^8.4.31",
+        "prettier": "^3.0.3",
+        "sass": "^1.69.5",
+        "typescript": "^5.2.2",
+        "vfonts": "^0.0.3",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@inertiajs/vue3": "^1.0.14",
+        "vue": "^3.3.7",
+        "ziggy-js": "^1.8.1"
     }
 }
