--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,8 @@
     "include": [
         "resources/js/**/*.ts",
         "resources/js/**/*.d.ts",
-        "resources/js/**/*.vue"
+        "resources/js/**/*.vue",
+        "components.d.ts",
     ],
     "exclude": [
         "node_modules",
