--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,7 @@ DB_PORT=3306
 DB_DATABASE=imctbus
 DB_USERNAME=username
 DB_PASSWORD=
+DB_LOG_QUERIES=true
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
